Logistic Regression as NN mindset

--- a/Course-1 Neural Network and Deep Learning/week_2/01_Vectorization_Demo/Vectorization-Demo.ipynb
+++ b/Course-1 Neural Network and Deep Learning/week_2/01_Vectorization_Demo/Vectorization-Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -22,15 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250057.64777123916\n",
-      "Vectorized Version: 1.9922256469726562ms\n"
+      "250114.6727643723\n",
+      "Calculation Time for Vectorized Version: 2.4700164794921875ms\n"
      ]
     }
    ],
@@ -45,20 +45,20 @@
     "c = np.dot(a,b)\n",
     "toc = time.time()\n",
     "print(c)\n",
-    "print(\"Vectorized Version: \" + str(1000*(toc-tic))+ \"ms\")"
+    "print(\"Calculation Time for Vectorized Version: \" + str(1000*(toc-tic))+ \"ms\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250057.64777123797\n",
-      "Ordinary For-Loop: 446.1071491241455ms\n"
+      "250114.67276436588\n",
+      "Calculation Time for Ordinary For-Loop: 547.3077297210693ms\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "    c += a[i]*b[i]\n",
     "toc = time.time()\n",
     "print(c)\n",
-    "print(\"Ordinary For-Loop: \" + str(1000*(toc-tic))+ \"ms\")"
+    "print(\"Calculation Time for Ordinary For-Loop: \" + str(1000*(toc-tic))+ \"ms\")"
    ]
   },
   {
