--- a/Course-4 Convolutional Neural Networks/week_3/Autonomous Driving Application - Car Detection v3.ipynb
+++ b/Course-4 Convolutional Neural Networks/week_3/Autonomous Driving Application - Car Detection v3.ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import os\n",
@@ -86,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOLO (\"you only look once\") is a popular algoritm because it achieves high accuracy while also being able to run in real-time. This algorithm \"only looks once\" at the image in the sense that it requires only one forward propagation pass through the network to make predictions. After non-max suppression, it then outputs recognized objects together with the bounding boxes.\n",
+    "YOLO (\"you only look once\") is a popular algorithm because it achieves high accuracy while also being able to run in real-time. This algorithm \"only looks once\" at the image in the sense that it requires only one forward propagation pass through the network to make predictions. After non-max suppression, it then outputs recognized objects together with the bounding boxes.\n",
     "\n",
     "### 2.1 - Model details\n",
     "\n",
